Cambio de color de fondo

--- a/ejemplo.html
+++ b/ejemplo.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<tittle>Ejemplo</tittle>
 </head>
-<body>
+<body bgcolor="orange">
+
 	<h1>Archivo de prueba GIT</h1>
 	<table border="1">
 		<tr>
