--- a/ejemplo.html
+++ b/ejemplo.html
@@ -5,7 +5,6 @@
 	<tittle>Ejemplo</tittle>
 </head>
 <body bgcolor="orange">
-
 	<h1>Archivo de prueba GIT</h1>
 	<table border="1">
 		<tr>
@@ -27,5 +26,6 @@
 			<td colspan="2"><input type="summit"></td>
 		</tr>
 	</table>
+	<img src="img01.jpg" width="315" alt="">
 </body>
 </html>
